--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>NgFlask</title>
-  <base href="/ng-flask/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/ng-flask/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.9a0eec479918fa5e6d65.css"></head>
+<link rel="stylesheet" href="styles.2bd0225df9c90f2156d5.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.b8de47d4afdd99ac6132.js" type="module"></script><script src="runtime-es5.b8de47d4afdd99ac6132.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.dacf2e8e4972dc9f3933.js" type="module"></script><script src="main-es5.dacf2e8e4972dc9f3933.js" nomodule defer></script></body>
+<script src="runtime-es2015.d65a652494ea0132ec7e.js" type="module"></script><script src="runtime-es5.d65a652494ea0132ec7e.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.a9675bc30af5569ec193.js" type="module"></script><script src="main-es5.a9675bc30af5569ec193.js" nomodule defer></script></body>
 </html>
